syntax = "proto3";

package proto;

import "ref.proto";

// this contains file metadata, which can be different
// accross backups, even if file content is the same
message FileInfo {
	string name = 1;
	uint32 mode = 2;
	string user = 3;
	string group = 4;
	int64 timestamp = 5;
	int64 size = 6;
	bool tree = 7;
}

message File {
	repeated FilePart parts = 1;
}

message FilePart {
	uint64 offset = 1;
	uint64 length = 2;
	Ref ref = 3;
}
